# mi_proyecto_python

./: .pre-commit-config.yaml  pyproject.toml
src/fundamentos/: datos.json  gestor_datos.py
