[project]
name = "mi-proyecto-python"
version = "0.1.0"
description = "Este primer proyecto corresponde al primer laboratorio, el cual es entorno y herramientas"
authors = [
    {name = "Luis",email = "luisdavidaguilarmarquez01@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
